--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
         "node": "10.x"
      },
    "scripts": {
-    "dev": "react-scripts-ts start",
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "dev": "node --max_old_space_size=2560 react-scripts-ts start",
+    "start": "node --max_old_space_size=2560 react-scripts-ts start",
+    "build": "node --max_old_space_size=2560 react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
